--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -82,12 +82,28 @@
           {{#each system.attributes as |attr key|}}
           <div class="attribute-grid-item">
             <h3>{{key}}</h3>
-            {{#each attr as |attribute label|}}
+            {{#each attr as |attribute label|}} {{json attribute}}
             <div class="attribute-row">
               <div class="attribute-column">
                 <span>{{label}}</span>
               </div>
-              <div class="attribute-column"></div>
+              <div class="attribute-column">
+                <div class="circles">
+                  {{#each (range attribute.min attribute.max) as |i|}}
+                  <input
+                    type="checkbox"
+                    class="circle-checkbox"
+                    data-target="attributes.{{../key}}.{{label}}.value"
+                    value="{{i}}"
+                  />
+                  {{/each}}
+                </div>
+                <div class="squares">
+                  {{#each (range 1 10) as |i|}}
+                  <input type="checkbox" class="square-checkbox" />
+                  {{/each}}
+                </div>
+              </div>
             </div>
             {{/each}}
           </div>
