create: creating method to control checkbox events

--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -82,7 +82,7 @@
           {{#each system.attributes as |attr key|}}
           <div class="attribute-grid-item">
             <h3>{{key}}</h3>
-            {{#each attr as |attribute label|}} {{json attribute}}
+            {{#each attr as |attribute label|}}
             <div class="attribute-row">
               <div class="attribute-column">
                 <span>{{label}}</span>
