create: creating bithrights and virtues partial

--- a/templates/actors/partials/birth-virtues.html
+++ b/templates/actors/partials/birth-virtues.html
@@ -1,1 +1,10 @@
-<span>teste</span>
+<div class="birth">
+  <div class="scion-label-title">
+    <h2>Birthrights</h2>
+  </div>
+</div>
+<div class="virtues">
+  <div class="scion-label-title">
+    <h2>Virtues</h2>
+  </div>
+</div>
