--- a/styles/partials/birth-virtues.css
+++ b/styles/partials/birth-virtues.css
@@ -1,5 +1,6 @@
 .birth,
-.virtues {
+.virtues,
+.virtues-wrapper {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -8,4 +9,31 @@
   height: auto;
   min-height: 0;
   max-height: none;
+}
+
+.virtues-wrapper {
+  padding: 0 2.25rem;
+}
+
+.virtues-row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 0.5rem;
+  width: 100%;
+  border-bottom: rgba(0, 0, 0, 1) 1px solid;
+  padding: 0.5rem 0;
+}
+
+.virtues-row > .virtues-column {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  flex: 1 1 auto;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.virtues-row > .virtues-column:nth-child(2) {
+  align-items: flex-end !important;
 }
