--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -53,13 +53,14 @@
       <div class="column">
         <div class="row">
           <label for="pantheon">Pantheon</label>
-          <input
-            type="text"
-            id="pantheon"
-            name="system.pantheon"
-            value="{{system.pantheon}}"
-            placeholder=""
-          />
+          <button
+            type="button"
+            class="scion-pantheon-button"
+            data-action="select-pantheon"
+          >
+            <span>{{system.pantheon}}</span>
+            <img src="{{system.pantheon.logo}}" alt="pantheon logo" />
+          </button>
         </div>
         <div class="row">
           <label for="god">God</label>
@@ -67,7 +68,7 @@
             type="text"
             id="god"
             name="system.god"
-            value="{{system.god}}"
+            value="{{system.pantheon.god}}"
             placeholder=""
           />
         </div>
