--- a/styles/scion-hero.css
+++ b/styles/scion-hero.css
@@ -1,3 +1,40 @@
+@font-face {
+  font-family: oldenburg-regular;
+  src: url("../assets/fonts/Oldenburg-Regular.ttf") format("truetype");
+  font-weight: normal;
+}
+@font-face {
+  font-family: roboto-regular;
+  src: url("../assets/fonts/Roboto-Regular.ttf") format("truetype");
+  font-weight: normal;
+}
+@font-face {
+  font-family: roboto-medium;
+  src: url("../assets/fonts/Roboto-Medium.ttf") format("truetype");
+  font-weight: normal;
+}
+@font-face {
+  font-family: roboto-italic;
+  src: url("../assets/fonts/Roboto-Italic.ttf") format("truetype");
+  font-style: italic;
+}
+@font-face {
+  font-family: roboto-thin;
+  src: url("../assets/fonts/Roboto-Thin.ttf") format("truetype");
+  font-weight: 100;
+}
+
+@font-face {
+  font-family: skranji-bold;
+  src: url("../assets/fonts/Skranji-Bold.ttf") format("truetype");
+  font-weight: bold;
+}
+@font-face {
+  font-family: skranji-regular;
+  src: url("../assets/fonts/Skranji-Regular.ttf") format("truetype");
+  font-weight: normal;
+}
+
 .scion-wrapper {
   width: 100%;
   height: auto;
@@ -8,6 +45,8 @@
   background: rgba(254, 254, 254, 255);
   padding: 15px 15px;
   border-radius: 5px;
+  font-family: skranji-regular, sans-serif !important;
+  font-size: medium;
 }
 
 .scion-header {
@@ -23,6 +62,7 @@
 .scion-header > h1 {
   border-bottom: 0;
   margin: 0;
+  font-family: skranji-bold, sans-serif;
 }
 
 .scion-form {
@@ -82,6 +122,7 @@
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   border-bottom: 0;
   margin: 0;
+  font-family: skranji-bold, sans-serif;
 }
 
 .scion-pantheon-button {
