update: updating text formatting from descriptions

--- a/templates/actors/dialogs/pantheon.html
+++ b/templates/actors/dialogs/pantheon.html
@@ -23,7 +23,7 @@
             </div>
             <div class="pantheon-description">
               {{#if pantheon.description}}
-              <p>{{pantheon.description}}</p>
+              <p>{{{pantheon.description}}}</p>
               {{else}}
               <p>No description available.</p>
               {{/if}}
