--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -58,7 +58,7 @@
             class="scion-pantheon-button"
             data-action="select-pantheon"
           >
-            <span>{{system.pantheon}}</span>
+            <span>{{system.pantheon.name}}</span>
             <img src="{{system.pantheon.logo}}" alt="pantheon logo" />
           </button>
         </div>
