--- a/templates/actors/dialogs/pantheon.html
+++ b/templates/actors/dialogs/pantheon.html
@@ -7,16 +7,33 @@
       <ul class="pantheon-list">
         {{#each pantheons as |pantheon|}}
         <li class="pantheon-item">
-          <input type="radio" name="pantheon-option" id="{{pantheon.name}}" value="{{pantheon.name}}" data-target="{{pantheon.name}}" hidden>
+          <input
+            type="radio"
+            name="pantheon-option"
+            id="{{pantheon.name}}"
+            value="{{pantheon.name}}"
+            data-target="{{pantheon.name}}"
+            hidden
+          />
           <label for="{{pantheon.name}}">
             <div class="pantheon-name">
               {{pantheon.name}}
-              <img class="pantheon-logo" src="{{pantheon.logo}}" alt="{{pantheon.name}}" />
+              <img
+                class="pantheon-logo"
+                src="{{pantheon.logo}}"
+                alt="{{pantheon.name}}"
+              />
+            </div>
+            <div class="virtues-label">
+              <span>Virtues</span>
             </div>
             <div class="pantheon-virtues">
               {{#splitInColumns pantheon.virtues 2 'pantheon-virtue-item'}}
               <div class="pantheon-virtue-item-row">{{key}}</div>
               {{/splitInColumns}}
+            </div>
+            <div class="description-label">
+              <span>Description</span>
             </div>
             <div class="pantheon-description">
               {{#if pantheon.description}}
