--- a/styles/dialogs/pantheon.css
+++ b/styles/dialogs/pantheon.css
@@ -64,7 +64,8 @@
   font-size: 1.45rem;
 }
 
-.pantheon-virtues {
+.pantheon-virtues,
+.god-skills {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   grid-auto-rows: minmax(60px, auto);
@@ -77,10 +78,16 @@
   align-items: center;
 }
 
+.god-skills > *:last-child:nth-child(odd) {
+  grid-column: 1 / -1;
+  justify-self: center;
+}
+
 .pantheon-item {
   padding: 1rem;
   border-bottom: 1px solid var(--color-border-light-tertiary);
   transition: background-color 0.3s ease;
+  text-transform: capitalize;
 }
 
 .pantheon-item:last-child {
@@ -103,6 +110,7 @@
 }
 
 .virtues-label,
+.skills-label,
 .description-label {
   width: 100%;
   text-align: center;
