--- a/styles/partials/stats.css
+++ b/styles/partials/stats.css
@@ -73,3 +73,9 @@
 .skills-column:nth-child(2) {
   align-items: flex-end !important;
 }
+
+.skills-row > .square-checkbox {
+  margin: 3px 0px;
+  pointer-events: none;
+  opacity: 0.8;
+}
