--- a/templates/actors/partials/birth-virtues.html
+++ b/templates/actors/partials/birth-virtues.html
@@ -8,15 +8,20 @@
     <h2>Virtues</h2>
   </div>
   <section class="virtues-wrapper">
-    {{#each (range 1 3) as |i|}}
+    {{#each system.virtues as |attr key|}}
     <div class="virtues-row">
       <div class="virtues-column">
-        <span>Virtue</span>
+        <span>{{key}}</span>
       </div>
       <div class="virtues-column">
         <div class="circles">
-          {{#each (range 1 5) as |i|}}
-          <input type="checkbox" class="circle-checkbox" />
+          {{#each (range attr.min attr.max) as |i|}}
+          <input
+            type="checkbox"
+            class="circle-checkbox"
+            data-target="virtues.{{key}}.value"
+            value="{{i}}"
+          />
           {{/each}}
         </div>
       </div>
