create: creating purview journal

--- a/templates/journals/purviews.html
+++ b/templates/journals/purviews.html
@@ -1,3 +1,4 @@
-<section class="pruviews-section">
-    <h1>TESTE</h1>
+<section class="purviews-section">
+  <h2>Description</h2>
+  <div><span>{{{purview.description}}}</span></div>
 </section>
