--- a/styles/journals/purview.css
+++ b/styles/journals/purview.css
@@ -1,32 +1,48 @@
 .journal-header {
-  font-family: oldenburg-regular, sans-serif !important;
+  display: none;
+}
+
+.journal-entry-page {
+  margin-top: 20px;
+  background: rgba(254, 254, 254, 255);
+  border-radius: 5px;
+  padding: 15px 15px;
 }
 
 .journal-page-header {
-  font-family: skranji-regular, sans-serif !important;
-  font-size: smaller;
-  padding: 0 0 20px 0;
-  border-bottom: 2px solid var(--color-underline-header);
   margin: 0 0 23px 0;
+  background-image: url(../../assets/png/band-small.png);
+  background-position: center center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  min-height: 60px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .journal-page-header > h1 {
   font-family: skranji-bold, sans-serif;
-  font-size: medium;
+  font-size: 1.5rem;
   margin: 0;
   padding: 0;
   border-bottom: none;
+  color: rgba(254, 254, 254, 255);
+  text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
-.pruviews-section {
+.purviews-section {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: auto;
   position: relative;
-  background: rgba(254, 254, 254, 255);
-  padding: 15px 15px;
-  border-radius: 5px;
   font-family: skranji-regular, sans-serif !important;
   font-size: medium;
+}
+
+.purviews-section > h2 {
+  font-family: skranji-bold, sans-serif;
+  font-size: 1.75em;
 }
