--- a/styles/journals/purview.css
+++ b/styles/journals/purview.css
@@ -1,15 +1,22 @@
-.journal-header {
+.purview-journal-entry-content > .journal-header {
   display: none;
 }
 
-.journal-entry-page {
+.purview-journal-entry-content
+  > .journal-entry-pages
+  > .scrollable
+  > .journal-entry-page {
   margin-top: 20px;
   background: rgba(254, 254, 254, 255);
   border-radius: 5px;
   padding: 15px 15px;
 }
 
-.journal-page-header {
+.purview-journal-entry-content
+  > .journal-entry-pages
+  > .scrollable
+  > .journal-entry-page
+  > .journal-page-header {
   margin: 0 0 23px 0;
   background-image: url(../../assets/png/band-small.png);
   background-position: center center;
@@ -22,7 +29,12 @@
   align-items: center;
 }
 
-.journal-page-header > h1 {
+.purview-journal-entry-content
+  > .journal-entry-pages
+  > .scrollable
+  > .journal-entry-page
+  > .journal-page-header
+  > h1 {
   font-family: skranji-bold, sans-serif;
   font-size: 1.5rem;
   margin: 0;
