create: creating knack list from compendium

--- a/styles/journals/purview.css
+++ b/styles/journals/purview.css
@@ -140,6 +140,7 @@
   padding: 20px;
   background: rgb(220, 220, 220);
   cursor: pointer;
+  border-radius: 4px;
 }
 
 .boon-list > li:last-child {
