--- a/styles/journals/knacks.css
+++ b/styles/journals/knacks.css
@@ -43,3 +43,37 @@
   color: rgba(254, 254, 254, 255);
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
+
+.knack-wrapper-list,
+.knack-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  font-family: skranji-bold, sans-serif;
+}
+
+.knack-wrapper-list {
+  gap: 1rem;
+}
+
+.knack-list > ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.knack-list > ul > li {
+  padding: 20px;
+  background: rgb(220, 220, 220);
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  border-radius: 4px;
+}
+
+.knack-list > ul > li > span {
+  font-style: italic;
+  font-weight: lighter;
+  text-align: justify;
+}
