create: connecting with virtues checkboxes

--- a/templates/actors/partials/birth-virtues.html
+++ b/templates/actors/partials/birth-virtues.html
@@ -9,7 +9,7 @@
   </div>
   <section class="virtues-wrapper">
     {{#each system.virtues as |attr key|}}
-    <div class="virtues-row">
+    <div class="virtues-row" data-key="{{key}}">
       <div class="virtues-column">
         <span>{{key}}</span>
       </div>
