--- a/templates/actors/partials/birth-virtues.html
+++ b/templates/actors/partials/birth-virtues.html
@@ -2,6 +2,12 @@
   <div class="scion-label-title">
     <h2>Birthrights</h2>
   </div>
+  <section class="birth-wrapper">
+    <div class="births"></div>
+    <div class="button">
+      <button>Add Birthright</button>
+    </div>
+  </section>
 </div>
 <div class="virtues">
   <div class="scion-label-title">
