--- a/templates/actors/partials/birth-virtues.html
+++ b/templates/actors/partials/birth-virtues.html
@@ -3,7 +3,23 @@
     <h2>Birthrights</h2>
   </div>
   <section class="birth-wrapper">
-    <div class="births"></div>
+    <div class="births">
+      <ul>
+        <li>
+          <div class="birthright-input-area">
+            <div class="row">
+              <div class="birthright-name">
+                <input type="text" placeholder="Brithright Name" />
+              </div>
+              <div class="birthright-level"></div>
+            </div>
+            <div class="row">
+              <div class="birthright-description"></div>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
     <div class="button">
       <button>Add Birthright</button>
     </div>
