--- a/templates/actors/partials/birth-virtues.html
+++ b/templates/actors/partials/birth-virtues.html
@@ -31,6 +31,14 @@
       </ul>
     </div>
     <div class="button">
+      <div class="birthright-types">
+        <label for="birthright-type">Choose the type</label>
+        <select name="" id="birthright-type">
+          {{#each system.birthrights as |birthright|}}
+          <option value="{{birthright.type}}">{{birthright.type}}</option>
+          {{/each}}
+        </select>
+      </div>
       <button>Add Birthright</button>
     </div>
   </section>
